--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="card">
             <h2>Asie</h2>
             <p>Nos meilleurs plats venus tout droit d'Asie</p>
-            <img class="food-picture" src="images/Asie.png" alt="Asie">
+            <img class="food-picture" src="images/asie.png" alt="Asie">
             <a href="#" class="btn btn-danger">Commandez</a>
           </div>
         </div>
